# NebulaEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE  pyproject.toml  test_python.py
.github/workflow/: ci.yml
.github/workflows/: ci.yml  wheels.yml
engine/: CMakeLists.txt
engine/bindings/: CMakeLists.txt  nebula_python.cpp
engine/cmake/: nebula_config.cmake
engine/core/: CMakeLists.txt
engine/core/include/nebula/: core.hpp  plugin_loader.hpp
engine/core/src/: core.cpp  plugin_loader.cpp
engine/interfaces/: CMakeLists.txt
engine/interfaces/nebula/: plugin_api.hpp
engine/plugins/: CMakeLists.txt
engine/plugins/plugin_a/: CMakeLists.txt
engine/plugins/plugin_a/src/: plugin_a.cpp
engine/plugins/plugin_b/: CMakeLists.txt
engine/runtime/: CMakeLists.txt
engine/runtime/src/: main.cpp
python/nebula/: __init__.py  cli.py
scripts/codegen/: gen_version.py
scripts/utils/: platform.py
tests/: CMakeLists.txt
tests/core_tests/: core_test.cpp
