[build-system]
requires = ["scikit-build-core>=0.11", "pybind11>=2.12"]
build-backend = "scikit_build_core.build"

[project]
name = "nebula-engine"
version = "0.1.0"
requires-python = ">=3.9"

[tool.scikit-build.wheel.cmake]
source-dir = "."
packages = ["nebula"]
package-dir = "python"
cmake = true
